# repos

./: .Rbuildignore  .gitignore  .goreleaser.yml  .nojekyll  AGENTS.html  AGENTS.md  DESCRIPTION  LICENSE  LICENSE.html  LICENSE.md  MANIFEST.in  NAMESPACE  README.md  _quarto.yml  clone.html  clone.qmd  entire-project.code-workspace  fix_conflict.sh  go.mod  index.html  index.qmd  install-local.sh  install.html  install.ps1  install.qmd  pipelines.html  pipelines.qmd  pyproject.toml  python-package.html  python-package.qmd  r-package.html  r-package.qmd  repos  repos-list.html  repos-list.qmd  repos.list  robots.txt  search.json  setup.html  setup.qmd  (+8 more)
.devcontainer/: devcontainer.json
.github/: RELEASE_CHECKLIST.md  copilot-instructions.md
.jules/: sentinel.md
R/: wrappers.R
debian/: changelog  control  copyright  repos.sh  rules
docs/: branch-slash-handling.md  local-git-remotes.md
homebrew/: README.md  repos.rb
man/: repos.Rd  repos_add_branch.Rd  repos_bundled_cli_version.Rd  repos_clone.Rd  repos_codespace.Rd  repos_install_cli.Rd  repos_installed_cli_version.Rd  repos_run.Rd  repos_update_branches.Rd  repos_update_scripts.Rd  repos_workspace.Rd  run_repos_binary.Rd  run_repos_script.Rd
scoop/: README.md  repos.json
scripts/: add-branch.sh  run-pipeline.sh  setup-repos.sh  update-branches.sh  update-scripts.sh
tests/: manual-test-branch-slashes.sh  test-add-branch-security.sh  test-auth-check.sh  test-branch-hardening.sh  test-branch-with-slashes.sh  test-clone-repos-flags.sh  test-clone-variations-comprehensive.sh  test-codespaces-auth.sh  (+43 more)
(+47 files in other folders)
