[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repos"
version = "1.0.0"
description = "Multi-repository management tool for Git"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Miguel Rodo", email = "miguel.rodo@uct.ac.za"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["git", "repository", "multi-repo", "worktree", "workspace"]

[project.urls]
Homepage = "https://github.com/MiguelRodo/repos"
Repository = "https://github.com/MiguelRodo/repos"
Issues = "https://github.com/MiguelRodo/repos/issues"

[project.scripts]
repos = "repos:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repos = ["scripts/**/*"]
